# spore-host

./: .gitignore  .goreleaser.yaml  CHANGELOG.md  DOCKER.md  README.md  RELEASE.md
.github/: FUNDING.yml
.github/workflows/: ci.yml  docs.yaml  integration-tests.yml  publish-python.yaml  security.yml  substrate-tests.yml  test-python-build.yaml
docs/: how-it-works.md  index.md  quickstart.md
docs/.vitepress/: config.mts
docs/guide/: first-instance.md
docs/guides/: first-instance.md  go-library.md  installation.md  job-arrays.md  jupyter.md  mcp-setup.md  notifications.md  plugins.md  python-sdk.md  self-hosting.md  spot-instances.md  teams-setup.md
docs/reference/: cheatsheet.md  configuration.md  ec2-tags.md  environment-variables.md  faq.md  iam-permissions.md  index.md
docs/research/: HEALTHOMICS_DECISION.md
docs/tools/: index.md  lagotto.md  mcp-server.md  spawn.md  spore-bot.md  truffle.md
docs/user-guide/: getting-started.md  installation.md  spore-bot.md  (+2 more)
infra/: DEPLOY.md
sdk/python/: pyproject.toml
sdk/python/examples/: jupyter_example.ipynb  marimo_example.py  script_example.py
sdk/python/spore/: __init__.py  client.py  spawn.py  truffle.py
spawn/: CHANGELOG.md  CONTRIBUTING.md  DATA_STAGING_GUIDE.md  DETACHED_MODE.md  MPI_AMI_GUIDE.md  MPI_GUIDE.md  OPERATIONS_GUIDE.md  PARAMETER_SWEEPS.md  QUICK_REFERENCE.md  README.md  SECURITY.md  SLURM_GUIDE.md  TROUBLESHOOTING.md  WORKFLOW_INTEGRATION.md  go.mod  go.sum
truffle/: go.mod  go.sum
web/: README.md  dashboard.html  deploy.sh  index.html  library.html  privacy.html  terms.html
(+99 files in other folders)
